lab1/Test/L1-A-11-20.cmm
struct epmHt4c {
}bIR8MLz0p4El7wAkG8ug [ 184546534 ] , gh 

;
struct qtusiAVA xz3xw9mN5WqKi6zpI0h ( ) {
  struct zzQ_jMD2u3mEdMvEW1 JUB ;
  int A4GK4n2pwC ;
  int xMK51z6uU7kKtebtZoAg , QBQ = Robg7r7YTPCHBhmY 
    ;
  float t ;
  if ( bQY )   Itcxyfqn > S2k1N8 - RSWzL_0PXPUMGLVKw 
    / eCE4 ( r = Q = ilHbuY = iNAI8RlsiYlJHJN8 = QI7ZM7dG 
    || k7h5g2bOW && rQgknxFdu8vKiaaHW8MB >= ! - BKcSkpuT 
    [ M <= ( kKYZPLtwJqJ = te612NuUbIP1 = Q7copt2Xbf / 
    ! - ( MyAM4kX0urRIVp9jzSM = kCDdAZVjXjq && a < Oz 
    + sQEGlVan1oTMngiL [ axjcrnJiXtvyjk5_ChF = BC5DRVRjzkfjpbmLHS_V 
    || Vvy12rJ03xHM00Jr && ! ! LO [ Ot5dQRix8BJeZp <= 
    hc5gmyJ + ! ( UaYTrmu7sEMSOUB || eeOWcpBw30 / EV59Gfo_OuuWn 
    [ JPxPgW92oPJ1nsVKU7oj = TcnDAuDQOdIrC20WTl = faa4QR0nvUi3h0t5_QaL 
    = rrbEtF = ( qSgLiERU5Kygo7S1X = wk0mwX == PlKzg * 
    s1NbPVacKjlv [ tkkWTWc = SzbNNjRBDKFVK0 = O5sp3tP 
    = kRL682EH1GcYaU = ioV + ( vcE5rPG = || qh9D_sTX && 
    H + - ( wdQeF8y || bM == NW - - v ( aAVb57fg , TSTdEV 
    ) || ( ZYfZvA ) - tKFxplj0DZpS1KQ ) ) * fk2pGlwGTqUN 
    ] ) / ( ! quNR8uEXaO ) ] . vH1u * ETBS14JEQiBGEo ) 
    ] ] != ! Hedo2J9v ) == - ! 845436036.726408201 / ! 
    Jm5lsijDGiB ) . SvAN6cgWdI0F4cWNb + 1447993394 * bBLPeOwxq 
    ( ) ] ) . oBE8v8fy7O ;

}
int ;
int jLtt6 ( int YDjWlWB0ouNx , struct oKywviiKgAR7Ynpj_bc 
  mo_LCTZOPiRde ) {
  if ( FoCehupeu )   m7ChBH ;
else   if ( mr3j68cM1 )   sC1afrTshvXzPEn ;
else   if ( xMJqTdoqq7j3fpeu )   enIZtfVPXI367iPpyIR 
    ;



  if ( Z )   while ( RkvpV )   u 

else   return OIYHZM ;

  while ( clh_X ) {
||     int Met ;
    int SkGMr7NBdfiI4uUS7nvT ;
    int GqiI30q2 ;
    int r7difN5Lzihl ;
  }
}
int ;
int 
int ;
struct {
  struct tCBwKTZ mk ;
};
int ;
struct j9vXUJYN7lnU ;
struct Pmlktu8PcUqeikqZr sq ( ) {
  int FRU while ;
}
